--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,20 @@
 <resources>
-    <string name="app_name">Calculator_app</string>
+    <string name="app_name">Calculator</string>
     <string name="calc_text">12345</string>
     <string name="btnSeven">7</string>
     <string name="btnEight">8</string>
     <string name="btnNine">9</string>
     <string name="btnDivide">/</string>
+    <string name="btnFour">4</string>
+    <string name="btnFive">5</string>
+    <string name="btnSix">6</string>
+    <string name="btnMultiply">*</string>
+    <string name="btnOne">1</string>
+    <string name="btnTwo">2</string>
+    <string name="btnThree">3</string>
+    <string name="btnSum">+</string>
+    <string name="btnSubtract">-</string>
+    <string name="btnZero">0</string>
+    <string name="clr">CLR</string>
+    <string name="btnEqual">=</string>
 </resources>
